# codex-goated-skills

./: .gitignore  MACOS_ICON_BARS_METRICS.md  README.md  pyproject.toml
.github/workflows/: catalog-audit.yml  publish-macos-icon-bars-metrics.yml  publish.yml
apps/clipboard-link-bar/: Package.swift  README.md
apps/clipboard-studio/: project.yml
apps/codex-limit-bar/: Package.swift  README.md
apps/flight-scout/: README.md  project.yml
apps/minecraft-skinbar/: project.yml
apps/on-this-day/: README.md  app.js  index.html  styles.css
apps/on-this-day-bar/: README.md  project.yml
apps/on-this-day-studio/: README.md  app.js  index.html  styles.css
apps/phone-spotter/: README.md  project.yml
apps/skillbar/: project.yml
apps/telebar/: project.yml
catalog/: README.md  index.json
collections/: README.md  SKILL_TEAMS.md  app-specific-skills.txt  audience-and-fandom-strategy.txt  creator-and-fandom-stack.txt  daily-briefs-and-reference.txt  fandom-skill-pack.md  fandom-skill-pack.txt  games-and-minecraft.txt  icon-bar-skill-categories.md  launch-and-distribution.txt  macos-utility-builders.txt  productivity-and-workflow.txt  utility-builder-stack.txt
scripts/: audit-catalog.sh  build-catalog.py  build_skill_market_index.py  install-all-skills.sh  install-cli.sh  install-fandom-pack.sh  install-pack.sh  install-skill.sh  install_macos_icon_bars.sh  install_macos_icon_bars_from_github.sh  render_macos_icon_bars_metrics.py  repo_launch_audit.py  run_skillbar.sh  show_macos_icon_bars_metrics.sh  skill_market_loop.py  sync-skill-manifests.py
(+787 files in other folders)
